<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorGreenSoft">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infodavid"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/infotext"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/infoemail"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/infogracias"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/ok"
            android:theme="@style/ButtonStyle" />

    </LinearLayout>

</LinearLayout>