<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/tvListProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/product"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/tvListProductMarket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/market"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tvListNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num"
            android:textSize="12sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvListPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:textSize="12sp"
            android:gravity="center"/>

    </LinearLayout>

<!--    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorAccent"/>-->

</android.support.constraint.ConstraintLayout>