<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zalaty.lalistadelacompra.ProductActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/productBackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:theme="@style/ProductBarStyle"
        app:title="@string/product"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/productBackButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/etProductName"
            android:background="#fff"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/etProductDescription"
            android:background="#fff"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/etProductPrice"
            android:inputType="numberDecimal"
            android:background="#fff"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/market"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spProductMarket"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/market"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:id="@+id/btnUpdate"
                android:text="@string/update"
                android:background="@drawable/rounded_corners"
                android:theme="@style/ButtonStyle"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/delete"
                android:theme="@style/ButtonStyle" />

        </RelativeLayout >


    </LinearLayout>

</RelativeLayout>