<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zalaty.lalistadelacompra.MarketActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/marketBackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:theme="@style/MarketBarStyle"
        app:title="@string/market"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/marketBackButton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/etMarketName"
            android:background="#fff"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zone"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/etMarketZone"
            android:background="#fff"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/rounded_corners"
            android:text="@string/save"
            android:theme="@style/ButtonStyle"/>

    </LinearLayout>

</RelativeLayout>