<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.zalaty.lalistadelacompra.ListAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ic_launcher_background"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/lstSupermercados"
                android:textSize="26dp"
                android:textStyle="bold"
                android:textColor="@color/colorGreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_marginLeft="10dp"
                android:layout_weight="3"/>

            <ImageView
                android:id="@+id/ivExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_exit"
                android:layout_weight="1">

            </ImageView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGreen"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spListProduct"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:prompt="@string/market"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="left"
            android:textAlignment="gravity"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/etListNum"
            android:inputType="number"
            android:background="#fff"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/rounded_corners"
            android:text="@string/save"
            android:theme="@style/ButtonStyle"/>

    </LinearLayout>

</RelativeLayout>