<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zalaty.lalistadelacompra.MarketActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/marketBackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:theme="@style/MarketBarStyle"
            app:title="@string/market"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/marketBackButton"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/ic_launcher_background"
        android:id="@+id/llButton">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGreen"/>

        <TextView
            android:id="@+id/lstSupermercados"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/yourMarketList" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/rounded_corners"
            android:text="@string/add"
            android:theme="@style/ButtonStyle" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="5"
            android:id="@+id/llHead"
            android:layout_below= "@id/llButton">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/zone"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <ScrollView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sw_layout"
            android:layout_above="@+id/footer"
            android:layout_below= "@id/llHead"
            android:orientation="horizontal"
            android:fillViewport="true">

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:id="@+id/lvMarket">
            </ListView>
        </ScrollView>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGoToList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goToList"
                android:theme="@style/ButtonStyle"
                android:background="@color/colorGreen"
                android:textSize="16dp"
                android:layout_margin="2dp"/>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>